--- a/src/views/index.html
+++ b/src/views/index.html
@@ -29,6 +29,12 @@
           >
             <div class="form-group">
               <input
+                type="text"
+                name="person"
+                id="input-name"
+                placeholder="name of person"
+              />
+              <input
                 type="file"
                 name="file"
                 multiple
