index_form templlate added

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,43 +2,43 @@
 <html>
 
 <head>
-  <!-- Basic -->
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <!-- Mobile Metas -->
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <!-- Site Metas -->
-  <meta name="keywords" content="" />
-  <meta name="description" content="" />
-  <meta name="author" content="" />
-  <link rel="shortcut icon" href="/res/images/favicon.png" type="image/x-icon">
+    <!-- Basic -->
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <!-- Mobile Metas -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <!-- Site Metas -->
+    <meta name="keywords" content="" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <link rel="shortcut icon" href="/res/images/favicon.png" type="image/x-icon">
 
-  <title>Guarder</title>
+    <title>Guarder</title>
 
-  <!-- bootstrap core css -->
-  <link rel="stylesheet" type="text/css" href="/res/css/bootstrap.css" />
+    <!-- bootstrap core css -->
+    <link rel="stylesheet" type="text/css" href="/res/css/bootstrap.css" />
 
-  <!-- fonts style -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:400,600,700&display=swap" rel="stylesheet" />
+    <!-- fonts style -->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:400,600,700&display=swap" rel="stylesheet" />
 
-  <!-- Custom styles for this template -->
-  <link href="/res/css/style.css" rel="stylesheet" />
-  <!-- responsive style -->
-  <link href="/res/css/responsive.css" rel="stylesheet" />
+    <!-- Custom styles for this template -->
+    <link href="/res/css/style.css" rel="stylesheet" />
+    <!-- responsive style -->
+    <link href="/res/css/responsive.css" rel="stylesheet" />
 </head>
 
 <body>
-  <div class="hero_area">
-    <!-- header section strats -->
-    <div class="hero_bg_box">
-      <div class="img-box">
-        <img src="/res/images/hero-bg.jpg" alt="">
-      </div>
-    </div>
+    <div class="hero_area">
+        <!-- header section strats -->
+        <div class="hero_bg_box">
+            <div class="img-box">
+                <img src="/res/images/hero-bg.jpg" alt="">
+            </div>
+        </div>
 
-    <header class="header_section">
-      <div class="header_top">
-        <!-- <div class="container-fluid">
+        <header class="header_section">
+            <div class="header_top">
+                <!-- <div class="container-fluid">
           <div class="contact_link-container">
             <a href="" class="contact_link1">
               <i class="fa fa-map-marker" aria-hidden="true"></i>
@@ -60,133 +60,130 @@
             </a>
           </div>
         </div> -->
-      </div>
-      <div class="header_bottom">
-        <div class="container-fluid">
-          <nav class="navbar navbar-expand-lg custom_nav-container">
-            <a class="navbar-brand" href="index.html">
-              <span>
+            </div>
+            <div class="header_bottom">
+                <div class="container-fluid">
+                    <nav class="navbar navbar-expand-lg custom_nav-container">
+                        <a class="navbar-brand" href="index.html">
+                            <span>
                 SpyEye- Wanted Person Tracking system
               </span>
-            </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        </a>
+                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class=""></span>
             </button>
 
-            <div class="collapse navbar-collapse ml-auto" id="navbarSupportedContent">
-              <ul class="navbar-nav  ">
-                <li class="nav-item active">
-                  <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="about.html"> About</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="service.html"> Services </a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="guard.html"> Guards </a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="contact.html">Contact us</a>
-                </li>
-              </ul>
+                        <div class="collapse navbar-collapse ml-auto" id="navbarSupportedContent">
+                            <ul class="navbar-nav  ">
+                                <li class="nav-item active">
+                                    <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="about.html"> About</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="service.html"> Services </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="guard.html"> Guards </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="contact.html">Contact us</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </nav>
+                </div>
             </div>
-          </nav>
-        </div>
-      </div>
-    </header>
-    <!-- end header section -->
-    <!-- slider section -->
-    <section class=" slider_section ">
-      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <div class="container">
-              <div class="row">
-                <div class="col-md-7">
-                  <div class="detail-box">
-                    <h1>
-                      Your Saftey <br>
-                      <span>
+        </header>
+        <!-- end header section -->
+        <!-- slider section -->
+        <section class=" slider_section ">
+            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-md-7">
+                                    <div class="detail-box">
+                                        <h1>
+                                            Your Saftey <br>
+                                            <span>
                         Our Responsibility
                       </span>
-                    </h1>
-                    <p>
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                      sed do eiusmod magna aliqua. Ut enim ad minim veniam
-                    </p>
-                    <div class="btn-box">
-                      <a href="/file-upload" class="btn-1">Register Wanted Report</a>
-                      <a href="" class="btn-2">Detect Person</a>
+                                        </h1>
+                                        <p>
+                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod magna aliqua. Ut enim ad minim veniam
+                                        </p>
+                                        <div class="btn-box">
+                                            <a href="/file-upload" class="btn-1">Register Wanted Report</a>
+                                            <a href="/index_form" class="btn-2">Detect Person</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item ">
-            <div class="container">
-              <div class="row">
-                <div class="col-md-7">
-                  <div class="detail-box">
-                    <h1>
-                      Your Saftey <br>
-                      <span>
+                    <div class="carousel-item ">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-md-7">
+                                    <div class="detail-box">
+                                        <h1>
+                                            Your Saftey <br>
+                                            <span>
                         Our Responsibility
                       </span>
-                    </h1>
-                    <p>
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                      sed do eiusmod magna aliqua. Ut enim ad minim veniam
-                    </p>
-                    <div class="btn-box">
-                      <a href="" class="btn-1"> Read more </a>
-                      <a href="" class="btn-2">Get A Quote</a>
+                                        </h1>
+                                        <p>
+                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod magna aliqua. Ut enim ad minim veniam
+                                        </p>
+                                        <div class="btn-box">
+                                            <a href="" class="btn-1"> Read more </a>
+                                            <a href="" class="btn-2">Get A Quote</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item ">
-            <div class="container">
-              <div class="row">
-                <div class="col-md-7">
-                  <div class="detail-box">
-                    <h1>
-                      Your Saftey <br>
-                      <span>
+                    <div class="carousel-item ">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-md-7">
+                                    <div class="detail-box">
+                                        <h1>
+                                            Your Saftey <br>
+                                            <span>
                         Our Responsibility
                       </span>
-                    </h1>
-                    <p>
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                      sed do eiusmod magna aliqua. Ut enim ad minim veniam
-                    </p>
-                    <div class="btn-box">
-                      <a href="" class="btn-1"> Read more </a>
-                      <a href="" class="btn-2">Get A Quote</a>
+                                        </h1>
+                                        <p>
+                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod magna aliqua. Ut enim ad minim veniam
+                                        </p>
+                                        <div class="btn-box">
+                                            <a href="" class="btn-1"> Read more </a>
+                                            <a href="" class="btn-2">Get A Quote</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                  </div>
                 </div>
-              </div>
+                <div class="container idicator_container">
+                    <ol class="carousel-indicators">
+                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                    </ol>
+                </div>
             </div>
-          </div>
-        </div>
-        <div class="container idicator_container">
-          <ol class="carousel-indicators">
-            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-          </ol>
-        </div>
-      </div>
-    </section>
-    <!-- end slider section -->
-  </div>
+        </section>
+        <!-- end slider section -->
+    </div>
 
-  <!-- about section
+    <!-- about section
 
   <section class="about_section layout_padding">
     <div class="container">
@@ -225,9 +222,9 @@
 
   <!-- end about section -->
 
-  <!-- service section -->
+    <!-- service section -->
 
-  <!-- <section class="service_section layout_padding">
+    <!-- <section class="service_section layout_padding">
     <div class="container">
       <div class="heading_container heading_center">
         <h2>
@@ -427,9 +424,9 @@
   <!-- end service section -->
 
 
-  <!-- client section -->
+    <!-- client section -->
 
-  <!-- <section class="client_section layout_padding">
+    <!-- <section class="client_section layout_padding">
     <div class="container ">
       <div class="heading_container heading_center">
         <h2>
@@ -507,11 +504,11 @@
     </div>
   </section> -->
 
-  <!-- end client section -->
+    <!-- end client section -->
 
-  <!-- contact section -->
+    <!-- contact section -->
 
-  <!-- <section class="contact_section layout_padding">
+    <!-- <section class="contact_section layout_padding">
     <div class="contact_bg_box">
       <div class="img-box">
         <img src="/res/images/contact-bg.jpg" alt="">
@@ -555,11 +552,11 @@
     </div>
   </section> -->
 
-  <!-- end contact section -->
+    <!-- end contact section -->
 
-  <!-- team section -->
+    <!-- team section -->
 
-  <!-- <section class="team_section layout_padding">
+    <!-- <section class="team_section layout_padding">
     <div class="container">
       <div class="heading_container heading_center">
         <h2>
@@ -623,12 +620,12 @@
         </a>
       </div>
     </div>
-  </section> --> --> -->
+  </section> -->--> -->
 
-  <!-- end team section -->
+    <!-- end team section -->
 
-  <!-- info section -->
-  <!-- <section class="info_section ">
+    <!-- info section -->
+    <!-- <section class="info_section ">
     <div class="container">
       <div class="row">
         <div class="col-md-3">
@@ -730,23 +727,23 @@
     </div>
   </section> -->
 
-  <!-- end info_section -->
+    <!-- end info_section -->
 
 
 
 
-  <!-- footer section -->
-  <footer class="container-fluid footer_section">
-    <p>
-      &copy; <span id="currentYear"></span> All Rights Reserved. Design by
-      <a href="https://html.design/">Free Html Templates</a>
-    </p>
-  </footer>
-  <!-- footer section -->
+    <!-- footer section -->
+    <footer class="container-fluid footer_section">
+        <p>
+            &copy; <span id="currentYear"></span> All Rights Reserved. Design by
+            <a href="https://html.design/">Free Html Templates</a>
+        </p>
+    </footer>
+    <!-- footer section -->
 
-  <script src="/res/js/jquery-3.4.1.min.js"></script>
-  <script src="/res/js/bootstrap.js"></script>
-  <script src="/res/js/custom.js"></script>
+    <script src="/res/js/jquery-3.4.1.min.js"></script>
+    <script src="/res/js/bootstrap.js"></script>
+    <script src="/res/js/custom.js"></script>
 </body>
 
 </html>
